--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,21 +18,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CollectionDetailActivity"></activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".UI.activity.CollectionDetailActivity"></activity>
+        <activity android:name=".UI.activity.LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RecordDetailActivity" />
+        <activity android:name=".UI.activity.RecordDetailActivity" />
 
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/network_secrity" />
 
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".UI.activity.MainActivity"></activity>
     </application>
 
 </manifest>
