--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".UI.activity.CollectionDetailActivity"></activity>
         <activity android:name=".UI.activity.LoginActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".UI.activity.RecordDetailActivity" />
 
@@ -32,7 +28,17 @@
             android:name="com.google.android.actions"
             android:resource="@xml/network_secrity" />
 
-        <activity android:name=".UI.activity.MainActivity"></activity>
+        <activity android:name=".UI.activity.MainActivity">
+            <meta-data
+                android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
