添加我的-登录

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Jul 08 23:40:31 CST 2020
-sdk.dir=D\:\\Program Files\\sdk
+sdk.dir=/home/lb/Android/Sdk
