--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 27 22:54:01 CST 2020
-sdk.dir=D\:\\Program Files\\sdk
+#Tue Jul 28 08:55:14 CST 2020
+sdk.dir=/home/lb/Android/Sdk
