--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,5 +112,19 @@ dependencies {
 
     implementation 'com.orhanobut:logger:2.2.0'
 
+    def paging_version = "3.0.0-alpha03"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
+    // alternatively - without Android dependencies for tests
+    testImplementation "androidx.paging:paging-common:$paging_version"
+
+    // optional - RxJava2 support
+    implementation "androidx.paging:paging-rxjava2:$paging_version"
+
+    // optional - Guava ListenableFuture support
+    implementation "androidx.paging:paging-guava:$paging_version"
+
+
 
 }
