--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Jul 28 08:55:14 CST 2020
-sdk.dir=/home/lb/Android/Sdk
+#Sun Aug 02 07:38:09 CST 2020
+sdk.dir=D\:\\Program Files\\sdk
