--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.crm_test"
+        applicationId "com.nightwolf.crm_test"
         minSdkVersion 24
         targetSdkVersion 27
         versionCode 1
@@ -26,7 +26,9 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-
+    viewBinding {
+        enabled = true
+    }
     dataBinding {
         enabled = true
     }
@@ -126,8 +128,7 @@ dependencies {
     // optional - Guava ListenableFuture support
     implementation "androidx.paging:paging-guava:3.0.0-alpha03"
 
-
-
+    implementation 'com.tencent.bugly:crashreport:latest.release'
 
 
 }
