--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Aug 09 08:17:49 CST 2020
-sdk.dir=/home/lb/Android/Sdk
+#Tue Apr 06 21:18:00 CST 2021
+sdk.dir=/work/Sdk
