--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,18 +19,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".UI.activity.CollectionDetailActivity"></activity>
-        <activity android:name=".UI.activity.LoginActivity">
+        <activity android:name=".ui.activity.CollectionDetailActivity"></activity>
+        <activity android:name=".ui.activity.LoginActivity">
 
         </activity>
-        <activity android:name=".UI.activity.RecordDetailActivity" />
+        <activity android:name=".ui.activity.RecordDetailActivity" />
 
         <meta-data
             android:name="com.google.android.actions"
             android:resource="@xml/network_secrity" />
 
         <activity
-            android:name=".UI.activity.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:launchMode="singleTask">
             <meta-data
                 android:name="android.app.shortcuts"
