--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,5 +140,7 @@ dependencies {
 
     implementation 'com.makeramen:roundedimageview:2.2.1'
 
+    implementation 'com.tencent:mmkv:1.0.22'
+
 
 }
