--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 06 21:18:00 CST 2021
-sdk.dir=/work/Sdk
+#Sat Nov 20 10:51:43 CST 2021
+sdk.dir=/Users/liwu/Library/Android/sdk
